feat(editor): add graph view and document linking
- Add GraphView component with visualization styling for document relationships
- Implement DocumentLink and DocumentLinkList extensions for Tiptap editor
- Add mention extension (@tiptap/extension-mention) for document references
- Add suggestion extension (@tiptap/suggestion) for mention autocomplete
- Integrate reactflow library for graph visualization and interaction
- Add tippy.js for tooltip positioning in mention suggestions
- Update TiptapEditor component to support new linking extensions
- Update WorkspacePage to display graph view alongside editor
- Update editorApi service to handle document linking operations
- Update main.tsx with necessary imports for new components
- Enable users to create and visualize connections between documents

--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@tiptap/extension-collaboration-cursor": "^2.1.13",
     "@tiptap/extension-image": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-mention": "^2.27.2",
     "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/suggestion": "^2.27.2",
     "file-extension-icon-js": "^1.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "reactflow": "^11.11.4",
+    "tippy.js": "^6.3.7",
     "yjs": "^13.6.28"
   },
   "devDependencies": {
