--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.10.1",
     "reactflow": "^11.11.4",
     "tippy.js": "^6.3.7",
+    "y-prosemirror": "^1.3.7",
     "yjs": "^13.6.28"
   },
   "devDependencies": {
