--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hocuspocus/provider": "^2.13.0",
     "@tiptap/extension-collaboration": "^2.1.13",
     "@tiptap/extension-collaboration-cursor": "^2.1.13",
+    "@tiptap/extension-highlight": "^2.27.2",
     "@tiptap/extension-image": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-mention": "^2.27.2",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.10.1",
     "reactflow": "^11.11.4",
     "tippy.js": "^6.3.7",
+    "y-prosemirror": "^1.3.7",
     "yjs": "^13.6.28"
   },
   "devDependencies": {
